# BG3ScriptTracer

./: .gitignore  CMakeLists.txt
ext/minhook/src/: hook.c
src/: Main.cpp  Memory.cpp  Memory.hpp  Osiris.hpp
